feat: 댓글의 총 개수를 조회하는 기능 구현
- 컨트롤러 테스트 추가
- 인수테스트 추가